table layout created

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -23,18 +23,163 @@
     <!-- Timeblocks go here -->
     <table class="table table-hover">
       <tbody>
+        <!-- Block for 9 AM -->
         <tr>
           <div class="col-sm-12">
             <td>
               <form>
-                  <div class="input-group-prepend">
-                    <span class="input-group-text">9 PM</span>
-                <div class="input-group mb-3">
-                  <input type="text" class="form-control" placeholder="Enter Text">
-                  <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="submit">Button</button>
+                <div class="input-group-prepend">
+                  <span class="input-group-text">9 AM</span>
+                  <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Enter Text">
+                    <div class="input-group-append">
+                      <submit class="btn btn-outline-secondary" type="submit">Submit</submit>
+                    </div>
                   </div>
                 </div>
+              </form>
+            </td>
+          </div>
+        </tr>
+        <!-- Block for 10 AM -->
+        <tr>
+          <div class="col-sm-12">
+            <td>
+              <form>
+                <div class="input-group-prepend">
+                  <span class="input-group-text">10 AM</span>
+                  <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Enter Text">
+                    <div class="input-group-append">
+                      <submit class="btn btn-outline-secondary" type="submit">Submit</submit>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </td>
+          </div>
+        </tr>
+        <!-- Block for 11 AM -->
+        <tr>
+          <div class="col-sm-12">
+            <td>
+              <form>
+                <div class="input-group-prepend">
+                  <span class="input-group-text">11 AM</span>
+                  <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Enter Text">
+                    <div class="input-group-append">
+                      <submit class="btn btn-outline-secondary" type="submit">Submit</submit>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </td>
+          </div>
+        </tr>
+        <!-- Block for 12 PM -->
+        <tr>
+          <div class="col-sm-12">
+            <td>
+              <form>
+                <div class="input-group-prepend">
+                  <span class="input-group-text">12 PM</span>
+                  <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Enter Text">
+                    <div class="input-group-append">
+                      <submit class="btn btn-outline-secondary" type="submit">Submit</submit>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </td>
+          </div>
+        </tr>
+        <!-- Block for 1 PM -->
+        <tr>
+          <div class="col-sm-12">
+            <td>
+              <form>
+                <div class="input-group-prepend">
+                  <span class="input-group-text">1 PM</span>
+                  <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Enter Text">
+                    <div class="input-group-append">
+                      <submit class="btn btn-outline-secondary" type="submit">Submit</submit>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </td>
+          </div>
+        </tr>
+        <!-- Block for 2 PM -->
+        <tr>
+          <div class="col-sm-12">
+            <td>
+              <form>
+                <div class="input-group-prepend">
+                  <span class="input-group-text">2 PM</span>
+                  <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Enter Text">
+                    <div class="input-group-append">
+                      <submit class="btn btn-outline-secondary" type="submit">Submit</submit>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </td>
+          </div>
+        </tr>
+        <!-- Block for 3 PM -->
+        <tr>
+          <div class="col-sm-12">
+            <td>
+              <form>
+                <div class="input-group-prepend">
+                  <span class="input-group-text">3 PM</span>
+                  <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Enter Text">
+                    <div class="input-group-append">
+                      <submit class="btn btn-outline-secondary" type="submit">Submit</submit>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </td>
+          </div>
+        </tr>
+        <!-- Block for 4 PM -->
+        <tr>
+          <div class="col-sm-12">
+            <td>
+              <form>
+                <div class="input-group-prepend">
+                  <span class="input-group-text">4 PM</span>
+                  <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Enter Text">
+                    <div class="input-group-append">
+                      <submit class="btn btn-outline-secondary" type="submit">Submit</submit>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </td>
+          </div>
+        </tr>
+        <!-- Block for 5 PM -->
+        <tr>
+          <div class="col-sm-12">
+            <td>
+              <form>
+                <div class="input-group-prepend">
+                  <span class="input-group-text">5 PM</span>
+                  <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Enter Text">
+                    <div class="input-group-append">
+                      <submit class="btn btn-outline-secondary" type="submit">Submit</submit>
+                    </div>
+                  </div>
                 </div>
               </form>
             </td>
