--- a/Develop/index.html
+++ b/Develop/index.html
@@ -14,26 +14,27 @@
 </head>
 
 <body>
-  <header class="jumbotron">
+  <header class="jumbotron" style="padding-bottom: 30px;">
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
+
   <div class="container">
     <!-- Timeblocks go here -->
     <table class="table table-hover">
       <tbody>
         <!-- Block for 9 AM -->
-        <tr>
+        <tr id="row9">
           <div class="col-sm-12">
             <td>
               <form>
                 <div class="input-group-prepend">
-                  <span class="input-group-text">9 AM</span>
+                  <span class="input-group-text">9:00 AM</span>
                   <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Enter Text">
+                    <input id="9" type="text" class="form-control" placeholder="Enter Text">
                     <div class="input-group-append">
-                      <submit class="btn btn-outline-secondary" type="submit">Submit</submit>
+                      <button class="btn saveBtn col-md-1" data-value="9"><i class="fas fa-save"></i></button>
                     </div>
                   </div>
                 </div>
@@ -42,16 +43,16 @@
           </div>
         </tr>
         <!-- Block for 10 AM -->
-        <tr>
+        <tr id="row10">
           <div class="col-sm-12">
             <td>
               <form>
                 <div class="input-group-prepend">
-                  <span class="input-group-text">10 AM</span>
+                  <span class="input-group-text">10:00 AM</span>
                   <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Enter Text">
+                    <input id="10" type="text" class="form-control" placeholder="Enter Text">
                     <div class="input-group-append">
-                      <submit class="btn btn-outline-secondary" type="submit">Submit</submit>
+                      <button class="btn saveBtn col-md-1" data-value="10"><i class="fas fa-save"></i></button>
                     </div>
                   </div>
                 </div>
@@ -60,16 +61,16 @@
           </div>
         </tr>
         <!-- Block for 11 AM -->
-        <tr>
+        <tr id="row11">
           <div class="col-sm-12">
             <td>
               <form>
                 <div class="input-group-prepend">
-                  <span class="input-group-text">11 AM</span>
+                  <span class="input-group-text">11:00 AM</span>
                   <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Enter Text">
+                    <input id="11" type="text" class="form-control" placeholder="Enter Text">
                     <div class="input-group-append">
-                      <submit class="btn btn-outline-secondary" type="submit">Submit</submit>
+                      <button class="btn saveBtn col-md-1" data-value="11"><i class="fas fa-save"></i></button>
                     </div>
                   </div>
                 </div>
@@ -78,16 +79,16 @@
           </div>
         </tr>
         <!-- Block for 12 PM -->
-        <tr>
+        <tr id="row12">
           <div class="col-sm-12">
             <td>
               <form>
                 <div class="input-group-prepend">
-                  <span class="input-group-text">12 PM</span>
+                  <span class="input-group-text">12:00 PM</span>
                   <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Enter Text">
+                    <input id="12" type="text" class="form-control" placeholder="Enter Text">
                     <div class="input-group-append">
-                      <submit class="btn btn-outline-secondary" type="submit">Submit</submit>
+                      <button class="btn saveBtn col-md-1" data-value="12"><i class="fas fa-save"></i></button>
                     </div>
                   </div>
                 </div>
@@ -96,16 +97,16 @@
           </div>
         </tr>
         <!-- Block for 1 PM -->
-        <tr>
+        <tr id="row13">
           <div class="col-sm-12">
             <td>
               <form>
                 <div class="input-group-prepend">
-                  <span class="input-group-text">1 PM</span>
+                  <span class="input-group-text">1:00 PM</span>
                   <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Enter Text">
+                    <input id="13" type="text" class="form-control" placeholder="Enter Text">
                     <div class="input-group-append">
-                      <submit class="btn btn-outline-secondary" type="submit">Submit</submit>
+                      <button class="btn saveBtn col-md-1" data-value="13"><i class="fas fa-save"></i></button>
                     </div>
                   </div>
                 </div>
@@ -114,16 +115,16 @@
           </div>
         </tr>
         <!-- Block for 2 PM -->
-        <tr>
+        <tr id="row14">
           <div class="col-sm-12">
             <td>
               <form>
                 <div class="input-group-prepend">
-                  <span class="input-group-text">2 PM</span>
+                  <span class="input-group-text">2:00 PM</span>
                   <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Enter Text">
+                    <input id="14" type="text" class="form-control" placeholder="Enter Text">
                     <div class="input-group-append">
-                      <submit class="btn btn-outline-secondary" type="submit">Submit</submit>
+                      <button class="btn saveBtn col-md-1" data-value="14"><i class="fas fa-save"></i></button>
                     </div>
                   </div>
                 </div>
@@ -132,16 +133,16 @@
           </div>
         </tr>
         <!-- Block for 3 PM -->
-        <tr>
+        <tr id="row15">
           <div class="col-sm-12">
             <td>
               <form>
                 <div class="input-group-prepend">
-                  <span class="input-group-text">3 PM</span>
+                  <span class="input-group-text">3:00 PM</span>
                   <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Enter Text">
+                    <input id="15" type="text" class="form-control" placeholder="Enter Text">
                     <div class="input-group-append">
-                      <submit class="btn btn-outline-secondary" type="submit">Submit</submit>
+                      <button class="btn saveBtn col-md-1" data-value="15"><i class="fas fa-save"></i></button>
                     </div>
                   </div>
                 </div>
@@ -150,16 +151,16 @@
           </div>
         </tr>
         <!-- Block for 4 PM -->
-        <tr>
+        <tr id="row16">
           <div class="col-sm-12">
             <td>
               <form>
                 <div class="input-group-prepend">
-                  <span class="input-group-text">4 PM</span>
+                  <span class="input-group-text">4:00 PM</span>
                   <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Enter Text">
+                    <input id="16" type="text" class="form-control" placeholder="Enter Text">
                     <div class="input-group-append">
-                      <submit class="btn btn-outline-secondary" type="submit">Submit</submit>
+                      <button class="btn saveBtn col-md-1" data-value="16"><i class="fas fa-save"></i></button>
                     </div>
                   </div>
                 </div>
@@ -168,16 +169,16 @@
           </div>
         </tr>
         <!-- Block for 5 PM -->
-        <tr>
+        <tr id="row17">
           <div class="col-sm-12">
             <td>
               <form>
                 <div class="input-group-prepend">
-                  <span class="input-group-text">5 PM</span>
+                  <span class="input-group-text">5:00 PM</span>
                   <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Enter Text">
+                    <input id="17" type="text" class="form-control" placeholder="Enter Text">
                     <div class="input-group-append">
-                      <submit class="btn btn-outline-secondary" type="submit">Submit</submit>
+                      <button class="btn saveBtn col-md-1" data-value="17"><i class="fas fa-save"></i></button>
                     </div>
                   </div>
                 </div>
@@ -192,7 +193,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  <script src="./Develop/app.js"></script>
+  <script src="./app.js"></script>
 </body>
 
 </html>
